Stop scrollbar shift

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,3 +23,7 @@
     );
   }
 }
+
+html {
+  scrollbar-gutter: stable;
+}
